<resources>
    <string name="app_name">MorseTalk</string>
    <string name="power">MorseTalk ON</string>
    <string name="volume">Vol +</string>
    <string name="scroll">Scroll</string>
    <string name="swipe">Swipe</string>
    <string name="pwm_on">PWM on duration: </string>
    <string name="pwm_off">PWM off duration: </string>
    <string name="otu">Trajanje jedne točke: </string>
    <string name="channel_name">Status</string>
    <string name="channel_description">Shows when service is running</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stopService">Ugasi</string>
    <string name="accesibilitySettings">Postavke pristupačnosti</string>
    <string name="accessibility_service_description">Morse input with volume buttons</string>
    <string name="main_menu">Main menu</string>
    <string name="contacts">Kontakti</string>
    <string name="next_contact">Next contact</string>
    <string name="previous_contact">Previous contact</string>
    <string name="open_contact">Open contact</string>
    <string name="listen_to_last_received_message">Listen to last received message (EXTRA)</string>
    <string name="listen_to_message_after">Listen to message after (NEXT)</string>
    <string name="listen_to_message_before">Listen to message before (PREVIOUS)</string>
    <string name="send_a_new_message">Send a new message (CONFIRM + message content)</string>
    <string name="read_from_files">Read from files</string>
    <string name="choose_file">File picker</string>
    <string name="next_file">Next file</string>
    <string name="previous_file">Previous file</string>
    <string name="open_file">Open file</string>
    <string name="search_in_file">Search in file</string>
    <string name="next_occurence">Next occurence</string>
    <string name="previous_occurence">Previous occurence</string>
    <string name="new_file">New file</string>
    <string name="save_file">Save file</string>
    <string name="write_to_file">Write to file</string>
    <string name="files_next_line">Next line</string>
    <string name="files_previous_line">Previous line</string>
    <string name="welcome">Bok</string>
    <string name="search_internet">Search internet</string>
    <string name="switch_search_engine">Switch search engine</string>
    <string name="feeling_lucky_on_off">Feeling lucky on/off</string>
    <string name="search">Search</string>
    <string name="next_result">Next result</string>
    <string name="previous_result">Previous result</string>
    <string name="skip_sentence">Skip sentence</string>
    <string name="go_back">GO BACK</string>
    <string name="repeat">REPEAT</string>
    <string name="default_web_client_id">574627640431-cuq9989e3mkf71nhep0n98gk8d01dq30.apps.googleusercontent.com</string>
    <string name="vibration_configuration">Postavke vibracije:</string>
    <string name="increase_pwm_on">increase PWM on</string>
    <string name="decrease_pwm_on">decrease PWM on</string>
    <string name="increase_pwm_off">increase PWM off</string>
    <string name="decrease_pwm_off">decrease PWM off</string>
    <string name="foot_calibration">Foot calibration</string>
    <string name="socketio_ip">SocketIO IP</string>
    <string name="save_settings">Spremi postavke</string>
    <string name="reset_settings">Resetiraj postavke</string>
    <string name="sample_text_to_test">Tekst za testiranje:</string>
    <string name="enter_some_text">Upiši neki tekst</string>
    <string name="test_vibration">testiraj vibraciju</string>
    <string name="stop_vibration">zaustavi vibraciju</string>
    <string name="physical_buttons">Fizičke tipke</string>
    <string name="registered_physical_keys_for_typing_morse_code">Registrirane fizičke tipke mobitela za unos morseovog koda: </string>
    <string name="add_key">Dodaj tipku</string>
    <string name="remove_key">Makni tipku</string>
    <string name="accesibility_service_has_to_be_enabled_to_use_this_feature_nto_add_a_physical_key_press_add_key_and_press_physical_button_on_device_or_connected_to_the_device_nto_remove_a_physical_key_press_remove_key_and_press_physical_button_you_wish_to_remove">Servis pristupačnosti mora biti uključen za korištenje ove funkcionalnosti.\nDa bi dodali fizičku tipku, pritisni \'DODAJ TIPKU\' i pritisni tipku na mobitelu ili tipku spojenu s mobitelom.\nDa bi maknuli fizičku tipku, pritisni \'MAKNI TIPKU\' i pritisni tipku koju želiš maknuti.</string>
    <string name="enter_contact_s_username">Upiši korisničko ime kontakta</string>
    <string name="add_contact">dodaj kontakta</string>
    <string name="register">Registracija</string>
    <string name="log_in">Prijava</string>
    <string name="password">Lozinka</string>
    <string name="johndoe">ivica</string>
    <string name="username">Korisničko ime</string>
    <string name="tutorial">Lekcija</string>
    <string name="tutorials">Informacije</string>
    <string name="playground">Slušaonica</string>
    <string name="visualise_accesibility">Visualise accesibility</string>
    <string name="tap_hold">Drži i pusti</string>
    <string name="popis_pitanja_i_odgovora">Popis pitanja i odgovora:</string>
    <string name="send">Pošalji</string>
    <string name="message">Poruka</string>
    <string name="vremenska_ograni_enja_mogu_e_je_podesiti_u_postavkama_aplikacije">Vremenska ograničenja moguće je podesiti u postavkama aplikacije.</string>
    <string name="vremenska_ograni_enja_su_ista_kao_kod_pravog_slanja_morseovog_koda_zato_je_bitno_izvje_bati_se_ovdje_prije_upotrebe_aplikacije">Vremenska ograničenja su ista kao kod pravog slanja morseovog koda, zato je bitno izvježbati se ovdje prije upotrebe aplikacije.</string>
    <string name="dr_u_i_tipku_se_puni_gornja_traka_pu_taju_i_tipku_se_puni_donja_traka">Držući tipku se puni gornja traka, puštajući tipku se puni donja traka.</string>
    <string name="ispod_mo_ete_isprobati_kako_morsov_kod_funkcionira">Ispod možete isprobati kako morsov kod funkcionira.</string>
    <string name="dot_or_dash">Točka ili crta?</string>
    <string name="new_character_space_or_send_message">Novi znak, razmak ili završi poruku?</string>
    <string name="text">Tekst:</string>
    <string name="settings">Postavke</string>
    <string name="open_accessibility_settings">Otvori postavke pristupačnosti</string>
    <string name="sign_out">Odjavi se</string>
    <string name="so_far_so_good">super za sad</string>
    <string name="start_tapping">Počni tipkati</string>
    <string name="wrong">krivo</string>
    <string name="tutorial_1_20">Lekcija: 1/20</string>
    <string name="sveukupno_pogodeno_rijeci">Sveukupno pogođeno riječi:</string>
    <string name="broj_slova">Broj slova: </string>
    <string name="brzina_koda">Trajanje točke: </string>
    <string name="award_status">Interval nagrađivanja: </string>
    <string name="google_prijava">Google prijava</string>
    <string name="accesibility_service_inactive">Usluga pristupačnosti isključena</string>
    <string name="accesibility_service_inactive_bigtext">Usluga pristupačnosti isključena - ne možeš koristiti fizičke tipke za slanje morseovog koda</string>
    <string name="accesibility_service_active">Usluga pristupačnosti uključena</string>
    <string name="delete_messages">Izbriši poruke</string>
    <string name="me">\"Ja: \"</string>
    <string name="them">\"Oni: \"</string>
</resources>
