<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MorseServiceVisualised"
        android:orientation="vertical">
        <TextView
            android:id="@+id/howtousephysicalbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="How to use physical buttons"
            android:padding="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/last_entered_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"/>
        <TextView
            android:id="@+id/last_characters_vibrated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"/>
        <TextView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/contacts"/>
        <TextView
            android:id="@+id/contacts_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/next_contact"/>
        <TextView
            android:id="@+id/contacts_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/previous_contact"/>
        <TextView
            android:id="@+id/contacts_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/open_contact"/>
        <TextView
            android:id="@+id/chat_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/listen_to_last_received_message"/>
        <TextView
            android:id="@+id/chat_message_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/listen_to_message_before"/>
        <TextView
            android:id="@+id/chat_message_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/listen_to_message_after"/>
        <TextView
            android:id="@+id/chat_send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/send_a_new_message"/>
        <TextView
            android:id="@+id/files_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/read_from_files"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FUNCTIONS BELOW NOT YET IMPLEMENTED"/>
        <TextView
            android:id="@+id/files_choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/choose_file"/>
        <TextView
            android:id="@+id/files_open_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/next_file"/>
        <TextView
            android:id="@+id/files_open_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/previous_file"/>
        <TextView
            android:id="@+id/files_open_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/open_file"/>
        <TextView
            android:id="@+id/files_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/search_in_file"/>
        <TextView
            android:id="@+id/files_search_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/next_occurence"/>
        <TextView
            android:id="@+id/files_search_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/previous_occurence"/>
        <TextView
            android:id="@+id/files_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/new_file"/>
        <TextView
            android:id="@+id/files_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/save_file"/>
        <TextView
            android:id="@+id/files_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/write_to_file"/>
        <TextView
            android:id="@+id/internet_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/search_internet"/>
        <TextView
            android:id="@+id/internet_engine_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/switch_search_engine"/>
        <TextView
            android:id="@+id/internet_feeling_lucky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/feeling_lucky_on_off"/>
        <TextView
            android:id="@+id/internet_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/search"/>
        <TextView
            android:id="@+id/internet_search_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/next_result"/>
        <TextView
            android:id="@+id/internet_search_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/previous_result"/>
        <TextView
            android:id="@+id/internet_search_skip_sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/skip_sentence"/>

        <TextView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/go_back"/>
        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"/>
    </LinearLayout>
</ScrollView>