<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingBottom="10dp"
            android:text="@string/ispod_mo_ete_isprobati_kako_morsov_kod_funkcionira"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingBottom="10dp"
            android:text="@string/dr_u_i_tipku_se_puni_gornja_traka_pu_taju_i_tipku_se_puni_donja_traka"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingBottom="10dp"
            android:text="@string/vremenska_ograni_enja_su_ista_kao_kod_pravog_slanja_morseovog_koda_zato_je_bitno_izvje_bati_se_ovdje_prije_upotrebe_aplikacije"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingBottom="15dp"
            android:text="@string/vremenska_ograni_enja_mogu_e_je_podesiti_u_postavkama_aplikacije"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Zatvori"
            android:padding="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>