<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualFeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dot_or_dash"
            android:gravity="center"
            android:id="@+id/textBaner"
            android:clickable="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp"
            android:background="@drawable/obrub">

            <com.example.morsecode.CustomProgressBarView
                android:id="@+id/custom_progress_down"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:first_threshold="0"
                app:second_threshold="200"
                app:bar_color="down"
                app:progress="0"
                app:first_text="dot"
                app:second_text="dash"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_character_space_or_send_message"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp"
            android:background="@drawable/obrub">
            <com.example.morsecode.CustomProgressBarView
                android:id="@+id/custom_progress_up"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:first_threshold="400"
                app:second_threshold="800"
                app:third_threshold="2000"
                app:bar_color="up"
                app:first_text="new character"
                app:second_text="space"
                app:third_text="message sent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="0 ms"
            android:gravity="center"/>
        <TextView
            android:id="@+id/playground_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            tools:text="Text extracted from morse"
            android:text="@string/text"/>

        <TextView
            android:id="@+id/all_timers_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            tools:text="Detected morse code"
            android:text="Morse: " />
    </LinearLayout>
</FrameLayout>